--- a/templates/index.html
+++ b/templates/index.html
@@ -288,6 +288,12 @@
                <a href="https://github.com/Kaushik-2005" target="_blank" class="footer__social-link" rel="noopener"> 
                   <i class="ri-user-2-line"></i>
                </a>
+               <a href="https://rahuljogi-code.github.io/portFolio.github.io/" target="_blank" class="footer__social-link" rel="noopener">
+                  <i class="ri-user-3-line"></i>
+               </a>
+               <a href="https://1drv.ms/f/s!As3e-SJvhwB4n2MrFcIrImhiyD6G?e=p47uVU" target="_blank" class="footer__social-link" rel="noopener"> 
+                  <i class="ri-user-2-line"></i>
+               </a>
 
                </a>
             </div>
